--- a/css/style.css
+++ b/css/style.css
@@ -42,15 +42,15 @@ body {
 
 .page-body {
   min-height: 100%;
-  display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  align-content: start;
 }
 
 .container {
   width: 1200px;
   margin: 0 auto;
   box-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 /* HEADER */
@@ -229,6 +229,28 @@ body {
   margin-bottom: 25px;
 }
 
+.features-item-black h3::before {
+  display: block;
+  content: "";
+  width: 75px;
+  height: 77px;
+  margin: 0 auto 28px;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+
+.features-item-black-house h3::before {
+  background-image: url(../img/house.svg);
+}
+
+.features-item-black-food h3::before {
+ background-image: url(../img/burger.svg);
+}
+
+.features-item-black-present h3::before {
+  background-image: url(../img/present.svg);
+}
+
 .features-item-black span {
   font-weight: normal;
   line-height: 21px;
@@ -257,6 +279,10 @@ body {
 
 .features-item-black-bottom h3 {
   margin-bottom: 25px;
+}
+
+.features-item-black-bottom h3::before {
+  display: none;
 }
 
 .features-item-black-bottom span {
@@ -727,7 +753,6 @@ body {
 
 .hotels-form-item label {
   position: relative;
-  display: block;
   cursor: pointer;
   user-select: none;
 }
