--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@
   line-height: 24px;
   color: var(--basic-black);
   text-transform: uppercase;
-  background-color: var(--basic-lightgrey);
 }
 
 .hotels-container {
@@ -70,7 +69,7 @@
   margin: 0;
   padding-top: 15px;
   padding-bottom: 15px;
-  padding: 15px 72px 15px 72px;
+  padding: 15px 0;
 }
 
 .main-header {
@@ -87,7 +86,6 @@
 
 .site-nav-item {
   margin: 0;
-  width: 25%;
 }
 
 .site-nav {
@@ -99,14 +97,16 @@
   padding: 0;
   text-align: center;
   background-color: var(--basic-white);
-}
-
-.site-nav-item-left {
+  margin-left: 73px;
   text-align: left;
 }
 
-.site-nav-item-right {
-  text-align: right;
+.site-nav li:nth-child(3n) {
+  margin-left: 261px;
+}
+
+.site-nav li:nth-child(4n) {
+  margin-right: 72px;
 }
 
 .site-nav-link {
@@ -139,12 +139,24 @@
   background-size: cover;
   background-color: var(--banner-background);
   text-align: center;
-  padding-top: 62px;
+  padding-top: 77px;
   padding-bottom: 80px;
 }
 
+.banner::after {
+  position: absolute;
+  content: "";
+  height: 57px;
+  width: 1200px;
+  top: 514px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-image: url(../img/sedonapicture.svg);
+  background-repeat: no-repeat;
+}
+
 .description {
-  padding-top: 42px;
+  padding-top: 37px;
   padding-bottom: 51px;
 }
 
@@ -153,7 +165,7 @@
   line-height: 26px;
   text-align: center;
   margin: 0;
-  margin-bottom: 45px;
+  margin-bottom: 43px;
 }
 
 .description-reason {
@@ -165,8 +177,10 @@
 
 .features-item-inner {
   margin: 0;
-  padding: 50px 49px 51px 50px;
+  padding: 49px 49px 51px 47px;
 }
+
+
 
 .features-list,
 .features-list ul,
@@ -176,7 +190,7 @@
 
 .features-list {
   text-align: center;
-  background-color: var(--basic-whitewhite);
+  background-color: var(--basic-white);
   list-style: none;
   margin: 0;
   padding: 0;
@@ -205,7 +219,7 @@
   background-color: var(--basic-white);
   list-style: none;
   margin: 0;
-  padding: 60px 65px 82px 73px;
+  padding: 54px 0 81px;
 }
 
 .features-item-white h3 {
@@ -225,7 +239,10 @@
 }
 
 .features-item-white p {
+  display: inline-block;
+  font-style: normal;
   font-weight: normal;
+  font-size: 14px;
   line-height: 21px;
   color: var(--basic-white);
   margin: 0;
@@ -283,7 +300,7 @@
   background-color: var(--special-grey);
   list-style: none;
   margin: 0;
-  padding: 47px 77px 54px 96px;
+  padding: 47px 0 54px;
 
 }
 
@@ -310,21 +327,21 @@
   background-color: var(--basic-white);
   text-align: center;
   margin: 0 auto;
-  padding-top: 58px;
+  padding-top: 56px;
 }
 
 .form h2 {
   font-size: 30px;
   color: var(--basic-black);
   margin: 0;
-  margin-bottom: 25px;
+  margin-bottom: 32px;
 }
 
 .form p {
   font-weight: normal;
   color: var(--basic-black);
   margin: 0;
-  margin-bottom: 78px;
+  margin-bottom: 45px;
 }
 
 .toggle-form {
@@ -332,7 +349,7 @@
 }
 
 .search-form {
-  display: none;
+  display: block;
   box-sizing: border-box;
   text-align: left;
   position: absolute;
@@ -345,17 +362,45 @@
 
 .show-form {
   display: block;
-  animation-name: left-to-center;
-  animation-duration:  2s;
+  animation-name: top-to-bottom;
+  animation-duration:  1s;
 }
 
-@keyframes left-to-center {
+.form-error {
+  animation: shake 0.6s;
+}
+
+@keyframes top-to-bottom {
   0% {
-    left: 0;
+    opacity: 0.5;
+    transform: translate(-50%, -50%);
   }
 
   100% {
-    left: 50%;
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translate(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translate(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translate(10px);
   }
 }
 
@@ -366,7 +411,7 @@
   flex-wrap: wrap;
   align-items: center;
   margin: 0;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 
 .form-field-button {
@@ -381,7 +426,7 @@
   background-repeat: no-repeat;
   background-position: center;
   top: 50%;
-  right: 15px;
+  right: 8px;
   transform: translateY(-50%);
   cursor: pointer;
   outline: none;
@@ -417,7 +462,7 @@
   color: var(--basic-black);
   background-color: var(--basic-lightgrey);
   text-transform: uppercase;
-  padding: 6px 174px 6px 13px;
+  padding: 6px 174px 6px 11px;
   border: 2px solid var(--basic-lightgrey);
   outline: none;
 }
@@ -431,6 +476,10 @@
   text-transform: uppercase;
   border: none;
   color: var(--basic-black);
+}
+
+.form-field-label .inner-label {
+  margin-right: -9px;
 }
 
 .form-field input:hover {
@@ -627,7 +676,7 @@
   justify-items: center;
   text-align: center;
   background-color: var(--footer-background);
-  padding-top: 36px;
+  padding-top: 23px;
   padding-bottom: 36px;
   border-top: 1px solid var(--border-background);
 }
@@ -639,6 +688,7 @@
 
 .footer-contacts {
   text-decoration: none;
+  margin-left: 72px;
 }
 
 .social-list {
@@ -647,7 +697,7 @@
   justify-content: center;
   align-items: center;
   margin: 0;
-  padding: 0;
+  padding: 13px;
 }
 
 .social-item {
@@ -667,8 +717,8 @@
   justify-content: center;
   align-items: center;
   text-decoration: none;
-  width: 48px;
-  height: 46px;
+  width: 46px;
+  height: 48px;
 }
 
 .social-link:hover {
@@ -725,12 +775,12 @@
   font-weight: normal;
   line-height: 26px;
   text-transform: uppercase;
-  margin: 0;
+  margin-right: 72px;
 }
 
 .footer-copyright p {
   margin: 0;
-  margin-right: 8px;
+  margin-right: 6px;
 }
 
 .footer-link-academy:hover path {
@@ -748,7 +798,7 @@
   flex-wrap: wrap;
   justify-items: center;
   margin: 0;
-  padding: 26px 73px 31px 72px;
+  padding: 25px 73px 32px 72px;
 }
 
 .result {
@@ -792,7 +842,7 @@
   flex-direction: row;
   align-items: center;
   margin: 0;
-  padding: 29px 73px 31px 73px;
+  padding: 26px 73px 33px 73px;
 }
 
 .sorting {
@@ -880,7 +930,7 @@
 }
 
 .hotels-price legend {
-  margin-bottom: 10px;
+  margin-bottom: 11px;
 }
 
 .hotels-filter {
@@ -907,7 +957,7 @@
 .range-controls {
   position: relative;
   height: 20px;
-  padding-top: 20px;
+  padding-top: 21px;
   margin-bottom: 15px;
 }
 
@@ -917,7 +967,7 @@
 }
 
 .range-controls .bar {
-  width: 70%;
+  width: 82%;
   height: 2px;
   background-color: var(--basic-white);
 }
@@ -941,7 +991,7 @@
 }
 
 .range-controls .toggle-max {
-  left: 210px;
+  left: 253px;
 }
 
 .price-controls {
@@ -964,7 +1014,7 @@
   line-height: 21px;
   text-transform: uppercase;
   color: var(--basic-white);
-  width: 50%;
+  width: 33%;
 }
 
 .price-controls input {
@@ -975,16 +1025,18 @@
   color: var(--basic-white);
   background-color: rgba(0, 0, 0, 0);
   border: none;
-  width: 40%;
+  width: 50%;
   outline: none;
 }
 
 .price-control-min {
   text-align: right;
+  margin-left: 37px;
 }
 
 .price-control-max {
   text-align: center;
+  margin-left: 58px;
 }
 
 /* CHECKBOX  */
@@ -1005,7 +1057,7 @@
   color: var(--basic-white);
   margin: 0;
   padding: 0;
-  margin-bottom: 27px;
+  margin-bottom: 25px;
   padding-left: 40px;
 }
 
@@ -1026,7 +1078,7 @@
 }
 
 .filters-item {
-  margin-right: 150px;
+  margin-right: 119px;
 }
 
 .filters-item:last-child {
@@ -1100,8 +1152,10 @@
   padding: 5px 34px;
   border: 2px solid var(--basic-white);
   border-radius: 2px;
+  width: 137px;
+  height: 37px;
+  margin-left: 85px;
   background: transparent;
-  margin: 0 auto;
   box-sizing: border-box;
 }
 
@@ -1191,7 +1245,6 @@
   color: var(--basic-black);
   margin: 0;
   padding: 0;
-  margin-bottom: 7px;
   cursor: pointer;
 }
 
@@ -1209,7 +1262,7 @@
   text-align: start;
   margin: 0;
   padding: 0;
-  margin-bottom: 15px;
+  margin-bottom: 13px;
   font-weight: normal;
   line-height: 21px;
   text-transform: uppercase;
@@ -1287,7 +1340,7 @@
   width: 110px;
   padding: 4px 17px;
   margin: 0;
-  margin-right: 6px;
+  margin-right: 3px;
   background: var(--basic-blue);
   line-height: 21px;
   text-transform: uppercase;
